# rust-basic-raytracer

./: .gitignore  Cargo.toml  ReadMe.md  example.rtp  perf_rendu.txt  perf_test.sh
benches/: bench_scene.rtp  benchmark_comps.rs  benchmark_objs.rs  benchmark_scene.rs
examples/: demo.rs  monkey.rs  teapot.rs  teapot_2.rs
helpers/: quat.html
perf/: perf_results.csv
scenes/: bench_scene.rtp  demo.rtp  monkey.rtp  rendu_1.rtp  rendu_2.rtp  scene_creator.xlsx  teapot.rtp  teapot_2.rtp  test_1.rtp  test_2_bench.rtp  test_cube.rtp  test_plan.rtp  test_surfacic.rtp  test_triangle_1_bench.rtp
src/: lib.rs  main.rs
src/mods/: camera.rs  color.rs  config.rs  constants.rs  funcs.rs  image.rs  img.rs  material.rs  mod.rs  objs.rs  parser.rs  position.rs  random.rs  ray.rs  render.rs  vect.rs
tests/: render_bench.rs
