[package]
name = "rbpt"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"

[features]
simd_support = []

[dependencies]
rayon = "1.10"
indicatif = "0.17.11"
clap = "4.5.37"
console = "0.15.11"


[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"

[[bench]]
name = "benchmark_comps"
harness = false

[[bench]]
name = "benchmark_objs"
harness = false

[[bench]]
name = "benchmark_scene"
harness = false

